--- a/proj2/main.css
+++ b/proj2/main.css
@@ -120,3 +120,40 @@ div.allmarg {
     font-weight: 800px;
     border-radius: 0px;
 }
+
+
+h2.hero3 {
+    text-align: center;
+    font-size: 35px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 800px;
+}
+div.hero4 {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin: 32px 350px 70px;
+    gap: 40px;
+}
+div.bocs {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    gap: 36px;
+}
+
+div.box {
+    border: 3px solid #3882f6;
+    border-radius: 15px;
+    height: 135px;
+    width: 135px;
+}
+
+.mainbox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
