--- a/proj2/main.css
+++ b/proj2/main.css
@@ -157,3 +157,27 @@ div.box {
     justify-content: center;
     text-align: center;
 }
+
+
+.head3 {
+    background-color: #E5E7EB;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin: -8px;
+}
+.section3 {
+    margin: 50px 290px 0px;
+
+}
+.text3 {
+    color: rgba(0, 0, 0, 0.603);
+    font-size: 35px;
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.auth {
+    text-align: right;
+    font-style: italic;
+    color: black;
+    font-size: 20px;
+}
