--- a/proj2/main.css
+++ b/proj2/main.css
@@ -181,3 +181,69 @@ div.box {
     color: black;
     font-size: 20px;
 }
+
+
+.head4 {
+    background-color: white;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin: -8px;
+}
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 39px 180px;
+}
+.box4 {
+    border-radius: 40px;
+    display: flex;
+    background-color: #3881f6d3;
+    height: 240px;
+    width: 980px;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    gap: 160px;
+}
+.h33 {
+    font-size: 35px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-bottom: 10px;
+    margin-bottom: -9px;
+    margin-top: 9px;
+}
+.signup2 {
+    color: black;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 19px;
+    padding-left: 35px;
+    padding-right: 35px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 50px;
+    background-color: #3882f6;
+    border-width: 5px;
+}
+.signup2:hover {
+    background-color: rgba(255, 255, 255, 0.534);
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-color: aquamarine;
+    font-style: bold;
+}
+
+
+.foot {
+    margin: -8px;
+    font-weight: 500;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #1f2937;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    word-spacing: 35px;
+    letter-spacing: 10px;
+    font-size: 12px;
+}
